Add authentication system to configuration

--- a/AIService/src/main/resources/application.properties
+++ b/AIService/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=ai-service
 
 ollama.url=http://localhost:11434
 ollama.chatmodel=mistral-nemo:latest
+chroma.url=http://localhost:8000
